<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="emptyStr"></string>
    <string name="app_name">터치앤매쓰</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_name">TouchNMath</string>    
    <string name="activity_no_image">No Image</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_clear_label">Clear</string>
    <string name="toolbar_hint">Hint</string>
    <string name="toolbar_result">Result</string>
    <string name="layout_top_guide">안내글 입니다.</string>

    <string name="title_section1">초등학교</string>
    <string name="title_section2">중학교</string>
    <string name="title_section3">고등학교</string>
    
    <string name="goto_saved_quiz">끝까지 풀지 못한 단원이 있습니다.\n문제를 이어서 푸시겠습니까?</string>
    <string name="first_quiz_alert">첫 번째 문제입니다.</string>
    <string name="last_quiz_alert">마지막 문제입니다.</string>
    <string name="next_quiz_question">다음 챕터로 넘어가시겠습니까?</string>
    <string name="last_quiz_warning">단원 마지막 문제입니다.</string>
    <string name="select_chapter">목차에서 공부할 단원을 선택하세요.</string>
    <string name="to_list">목록으로</string>
    <string name="goto_chapterlist">목차로 가기</string>
    <string name="goto_nextchapter">다음 챕터로</string>
    <string name="notice_upgrade">업그레이드 알림</string>
    <string name="msg_upgrade">&#160;터치수학은 안드로이드 운영체제 4.4.3 이상\n 버전에서 정상적으로 실행됩니다.\n\n
      이 공지가 뜨는 스마트폰은 4.4.3 미만\n 
      버전의 기능상의 버그로 두 번째 페이지부터\n 
      문제가 출력되지 않는 현상이 발생합니다.\n\n
      운영체제 업그레이드는 스마트폰 제조사 \n
      홈페이지에서 해당 스마트폰 모델을 찾아서\n
      업그레이드 해야 합니다.  
    </string>

    <string name="touchnmath_title">터치앤매쓰</string>
    <string name="first_hint">첫 번째 개념입니다.</string>
    <string name="last_hint">단원 마지막 개념입니다.\n다른 단원의 개념은 목차에서\n선택하세요.</string>
    
    <string name="naver_start_error_title">네이버로 시작하기 오류</string>
    <string name="naver_start_error_content">네이버 아이디로 시작할 수 없습니다.\n 관리자에게 문의해주세요.</string>
    <string name="naver_start_hello">터치앤매쓰 가족이 되신 것을 환영합니다.</string>
    
    <string name="user_quit">탈퇴하시겠습니까?</string>
    <string name="user_quit_warning">탈퇴하시면 회원 가입 이후 공부 기록이 삭제되며\n 정식 버전에서 무료 사용 기간 제공 등의
        														 혜택을\n받을 수 없게 됩니다.</string>
    <string name="user_quit_question">정말 탈퇴하시겠습니까?</string>
    
    <string name="user_quit_email">- 이메일 주소를 변경하고 싶으시면 1:1 문의하기를 \n&#160;&#160;통해 요청해주세요.</string>
    <string name="user_quit_claim">- 이용 시 불편 사항이 있다면 1:1 문의하기로 문의\n&#160;&#160;부탁드립니다.</string>
    
    <string name="tab1_button">1</string>
    <string name="tab2_text">2</string>
    <string name="example">3</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="lastest_ver">&#160;(최신 버전입니다.)</string>
    <string name="not_lastest_ver">&#160;(업데이트가 필요합니다.)</string>

    <string name="navi_section1">학년선택</string>
    <string name="navi_section2">터치앤매쓰 소개</string>
    <string name="navi_section4">공지사항</string>
    <string name="navi_section5">단원목차보기</string>
    <string name="navi_section7">문의하기</string>
    <string name="navi_section8">개인정보취급방침</string>
		<string name="navi_section9">이용약관</string>
		<string name="navi_section10">설정</string>
		
		<string name="share_app">
      수학은 손맛.\n가장 쉬운 수학 공부 - 터치앤매쓰를 경험해보세요.
    	\n\nhttps://play.google.com/store/apps/details?id=com.touchnedu.gradea.studya.math
    </string>
		
		<string name="math_1_0_0">http://touchnbox.cafe24.com/main_app.html</string>
		<string name="math_1_1_4">http://touchnbox.cafe24.com/main_app_1.1.4.html</string>
		<string name="math_1_1_6">http://touchnbox.cafe24.com/main_app_1.1.6.html</string>
		<string name="math_1_2_3">http://touchnbox.cafe24.com/main_app_1.2.3.html</string>
		<string name="test_content">http://touchnbox.cafe24.com/main_app_test.html</string>
		<string name="math_content">http://touchnbox.cafe24.com/mathsrc/math_data.html</string>
		<string name="hint_url">http://touchnbox.cafe24.com/mathsrc/hint_data.html</string>
		<string name="chapter_default">http://touchnbox.cafe24.com/chapter_images/bar_</string>
		<string name="chapter_white">http://touchnbox.cafe24.com/chapter_images/white_bar_</string>
		<string name="all_hint_view">http://touchnbox.cafe24.com/mathsrc/hint_data.html</string>
		
		<string name="touchnedu_personal">http://touchnbox.cafe24.com/sub/private.html</string>
		<string name="touchnedu_agree">http://touchnbox.cafe24.com/sub/term.html</string>
		<string name="touchnedu_notice">http://touchnbox.cafe24.com/sub/notice.html</string>
		<string name="error_info">http://touchnbox.cafe24.com/error_info.jsp</string>
		<string name="homepage_url">http://www.touchnedu.com</string>
	
		<!-- dialog msg -->
    <string name="dilog_msg">종료하시겠습니까?</string>
    <string name="dialog_logout">로그아웃 하시겠습니까?</string>
    <string name="touchnmath_quit">터치수학을 종료하시겠습니까?</string>
    <string name="dilog_yes">예</string>
    <string name="dilog_no">아니오</string>    
    <string name="end_msg">인터넷 연결을 확인하세요. \n인터넷이 연결된 상태에서만 \n사용 가능합니다.</string>
    <string name="end_yes">종료</string>
    <string name="ad_title">사용하기 전 유의사항</string>
    <string name="ad_msg">현재 버전은 1차 알파 버전으로서 현재 버전의 이용에 따라 발생한 시스템적 오류나 이상에 대해서는 본사가 책임지지 않습니다.</string>
    <string name="ad_yes">확인</string>    
    <string name="ad_no">취소</string>    
    
    <string name="service_msg">"현재 서비스 준비 중 입니다."</string>
    <string name="not_ready">\n준비중입니다.\n</string>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
</resources>